Do nothing if target layer is locked

BUG:459797